+ minor changes
