# payment-service/docs/swagger.json
@@ -6,13 +6,17 @@
     "paths": {
         "/accounts": {
             "post": {
+                "description": "Creates a new account",
+                "summary": "Create account",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "user id",
-                        "name": "user_id",
-                        "in": "query",
-                        "required": true
+                        "description": "Account info",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httphandler.CreateAccountRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -63,11 +67,13 @@
                         "required": true
                     },
                     {
-                        "type": "number",
-                        "description": "amount",
+                        "description": "Deposit amount",
                         "name": "amount",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httphandler.DepositRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -75,6 +81,61 @@
                         "description": "OK",
                         "schema": {}
                     }
+                }
+            }
+        },
+        "/users/{id}/account": {
+            "get": {
+                "summary": "Get users account by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Get by users id",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httphandler.GetByUserIdRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {}
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "httphandler.CreateAccountRequest": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "httphandler.DepositRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                }
+            }
+        },
+        "httphandler.GetByUserIdRequest": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
